# chemecho_epfl

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
ch200_project/: .copier-answers.yml  LICENSE  README.md  pyproject.toml
chemecho_epfl_main_code/: get_spectrum.py  ir_spectra_conversion.py  ir_visualisation.py  musification.py  streamlit_app.py  translation_ir_to_music.py
data/: download_spectra.py
docs/source/: conf.py
notebooks/: Acetone_audio_spectrum_fg.mid  chemecho_report.ipynb  chemecho_report_eulalie.ipynb  musification results z.ipynb  player.html  report.ipynb  report_z.ipynb
scripts/: get_spectrum.py
src/chemecho/: __init__.py  app.py  get_spectrum.py  musification.py  musification_1.0_obsolete_will_probs_delete.py  musification_2.0.py  musification_changes.md  musification_fg.py  musification_v2.py  spectrum_utils.py  streamlit_app.py  streamlit_app_v1.py  streamlit_app_v2.py  utils.py
tests/: test_example_module.py  test_get_spectrum.py  test_musification_fg.py  test_utils.py  tests_functions.py
