[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemecho"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "A Python package that converts molecular IR spectra into MIDI music"
dependencies = [
    "nistchempy>=1.0.5",
    "jcamp>=1.2.2",
    "midiutil>=1.2.1",
    "scipy>=1.15.3",
    "rdkit>=2025.9.6",
    "streamlit>=1.57.0",
    "requests>=2.33.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]
authors = [
    {name = "ynhchoi", email = "handyhc48@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/yhchoi/chemecho"
tracker = "https://github.com/yhchoi/chemecho/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/chemecho/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = ["test_*.py", "tests_*.py"]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
