[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemecho"
version = "1.0"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "MIT"}
description = "ChemEcho is a tool to translate IR spectrum into music, making accessible the data for blind or visually impaired person. 
This package is also intended for curious people who wants to discover a new fun and cool approach to compare molecules. "
dependencies = [
    "rdkit",
    "matplotlib",
    "nistchempy == 1.0.5"
    "pandas",
    "streamlit",
    "musicpy", 
    "jcamp",
    "io",
    "os", 
    "requests",
    "base64",
    "numpy == 1.25",
    "py3Dmol"
]
authors = [
    {name = "Eulalie Schwendenmann", email = "eulalie.schwendenmann@epfl.ch"},
    {name = "Zoé Chartier", email = "zoe.chartier@epfl.ch"},
    {name = "Yunhee Choi", email = "yunhee.choi@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/yhchoi/chemecho"
tracker = "https://github.com/yhchoi/chemecho/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/chemecho/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
