[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemecho"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
description = "ChemEcho — translate IR spectra into music to make spectroscopy accessible to blind and visually impaired users, and to offer everyone a fun new way to compare molecules."
dependencies = [
    "rdkit",
    "matplotlib",
    "nistchempy==2.0.0",
    "pandas",
    "streamlit",
    "musicpy",
    "jcamp",
    "requests",
    "numpy>=1.25,<2.0",
    "scipy",
    "py3Dmol",
    "pytest"
]
authors = [
    {name = "Eulalie Schwendenmann", email = "eulalie.schwendenmann@epfl.ch"},
    {name = "Zoé Chartier", email = "zoe.chartier@epfl.ch"},
    {name = "Yunhee Choi", email = "yunhee.choi@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/ynhchoi/chemecho_epfl"
tracker = "https://github.com/ynhchoi/chemecho_epfl/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/chemecho/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ['__init__.py']

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
